--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Project 1: CS S-15</title>
 	<style type="text/css">
-	h1 {
+	h1,p {
 		text-align: center;
 	}
 	</style>
@@ -11,12 +11,19 @@
 </head>
 <body>
 	<h1>Personal Description</h1>
+	My name is David Becerra. I am going to be a senior this fall at Harvard University, and I am concentrating in computer science and math. This summer, I am working as a math tutor for the Academic Tutoring Program in addition to being a proctor for the summer school.
 	<h1>Why are you taking this course?</h1>
+	<p>The reason I am taking this course is rather straightforward: I want to learn more web development. Way back when I was a freshman enrolled in CS50, I learned the basics of web development. I used my final project as a means to explore the subject further; my project group designed a website where users could reserve and order food from restaurants online. Unfortunately, that was really the last major time I did any web development. I've always wanted to continue creating and designing cool new websites, and so this class seems like a perfect tool to push me back into web design.</p>	
 	<h1>What previous experience do you have with HTML/CSS?</h1>
+	<p>I took the Harvard course Computer Science 50 which covered the basics of HTML and CSS. As stated above, I made a website for my final project. I have no other HTML/CSS experience outside of that class.</p>
 	<h1>What previous experience do you have with programming?</h1>
+	<p>I have been progamming since I was a freshman in college, so almost for three years now. In that time I have programmed in C, C++, Pearl, Python, PHP, Javascript, Ocaml, Haskell, and Matlab. At Harvard I have taken CS50, CS51, CS175, CS277, CS182, CS121, CS124, CS61, and CS152. These courses ranged from low level programming to artifial intelligence to computer graphics. Outside of class, I have done handful of small independent projects using Pearl and C++.</p>
 	<h1>Have you worked with PHP before? If so, to what extent?</h1>
+	<p>I have worked with PHP before. The course CS50 went over the basics of PHP. In that class, we learned how to use it to communicate with a MYSQL database. In addition, I utilized a substantial amount of PHP in my final CS50 project.</p>
 	<h1>Are you working on a Mac, PC, or some other platform?</h1>
+	<p>I am working on a PC with Windows 7.</p>
 	<h1>Anything else we should know?</h1>
+	<p>I love video games!!.....No I think that's everything.</p>
 </body>
 
 </html>
