--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		text-align: center;
 	}
 	</style>
-
+	<meta name="author" content="David Becerra">
+	<meta name="description" content="Project 1 for cs-15 course">
 </head>
 <body>
 	<h1>Personal Description</h1>
