Finished stylizing site

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	<meta name="author" content="David Becerra">
 	<meta name="description" content="Project 1 for cs-15 course">
 </head>
-<body style="background-color: #FFFFC2;">
+<body style="background-color: #FFF5CC;">
 	<div id="container">
+		<div id="title">
+			<h1 id="title">Project 1: CS-S15</h1>
+			<h3>By: David Becerra</h3>
+		</div>
 
 		<div id="image">
 			<img class="headshot" src="images/fro.jpg">
@@ -20,7 +24,7 @@
 			<h1 class="question">Personal Description</h1>
 			My name is David Becerra. I am going to be a senior this fall at Harvard University, and I am concentrating in computer science and math. This summer, I am working as a math tutor for the Academic Tutoring Program in addition to being a proctor for the summer school.
 			<h1 class="question">Why are you taking this course?</h1>
-			<p>The reason I am taking this course is rather straightforward: I want to learn more web development. Way back when I was a freshman enrolled in CS50, I learned the basics of web development. I used my final project as a means to explore the subject further; my project group designed a website where users could reserve and order food from restaurants online. Unfortunately, that was really the last major time I did any web development. I've always wanted to continue creating and designing cool new websites, and so this class seems like a perfect tool to push me back into web design.</p>	
+			<p>The reason I am taking this course is rather straightforward: I want to learn more web development. Way back when I was a freshman enrolled in CS50, I learned the basics of web development. I used my final project as a means to explore the subject further; my project group designed a <a href="http://www.sporfed.com">website</a> where users could reserve and order food from restaurants online. Unfortunately, that was really the last major time I did any web development. I've always wanted to continue creating and designing cool new websites, and so this class seems like a perfect tool to push me back into web design.</p>	
 			<h1 class="question">What previous experience do you have with HTML/CSS?</h1>
 			<p>I took the Harvard course Computer Science 50 which covered the basics of HTML and CSS. As stated above, I made a website for my final project. I have no other HTML/CSS experience outside of that class.</p>
 			<h1 class="question">What previous experience do you have with programming?</h1>
